--- a/menuPage.html
+++ b/menuPage.html
@@ -3,65 +3,290 @@
   <head>
     <meta charset="utf-8">
     <title>My Site - Website Structure Exercise</title>
+    <link rel="stylesheet" type="text/css" href="homePage.css"/> 
     <link rel="stylesheet" type="text/css" href="menu.css"/>
   </head>
   <body>
+    <div id="containerDiv">
+      <div class="borderDiv"></div>
 <div id="overallDiv">
-  <img id="logoImage" src="images/WebsiteDesign_Logo.png" />
-<h3>Welcome to Castelli Cooking's Menu!</h3>
-<p>Select an image to view the varieties of that food item that we offer.</p>
+  <table id="logoTable">
+    <tbody>
+        <tr>
+            <td class="spaceCol"></td>
+            <td id="logoCol"><img id="logoImage" src="images/WebsiteDesign_Logo.png" /></td>
+            <td id="returnCol"><a href="index.html">Back to Home page</a></td>
+        </tr>
+    </tbody>
+</table>
+<h3 style="text-align:center">Welcome to Castelli Cooking's Menu!</h3>
+<p>Select an image to view the varieties of that food item that we offer. Please note that our 
+  committment to using only fresh foods means we buy alll ingedeints on the spot market so the prices are 
+  constantly changing.
+</p>
+<h4 class="sectionTitle">Main Dishes</h4>
   <table id="mainTable">
     <tbody>
         <tr><td>Steak</td><td>Fish</td><td>Chicken</td></tr>
-      <tr><td><img id="cowImage" src="images/WebsiteDesign_Cow.png" onclick="displayTable(this.id)"/></td>
-        <td><img id="fishImage" src="images/WebsiteDesign_Fish.png" onclick="displayTable(this.id)"/>></td>
-    <td><img id="chickenImage" src="images/WebsiteDesign_Chicken.png" onclick="displayTable(this.id)"/></td></tr>
+      <tr><td><img id="cowImage" src="images/WebsiteDesign_Cow.png" onclick="displayProteinTable(this.id)"/></td>
+        <td><img id="fishImage" src="images/WebsiteDesign_Fish.png" onclick="displayProteinTable(this.id)"/></td>
+    <td><img id="chickenImage" src="images/WebsiteDesign_Chicken.png" onclick="displayProteinTable(this.id)"/></td></tr>
     </tbody>
   </table>
   <div id="steakType">
-    <label for="steak">Select the dropdown menu to view the cuts of steak we offer</label>
-    <select name="steak" id="steak">
-        <option value="filet">Filet Mignon</option>
-        <option value="ribeye">Ribeye</option>
-        <option value="porterhouse">Porterhouse</option>
-        <option value="sirloin">Sirloin</option>
-    </select>
+    <table><thead><tr>
+      <th>Cut of Steak</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Filet Mignon</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Sirloin</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Ribeye</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Porterouse</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
   </div>
   <div id="fishType">
-    <label for="fish">Select the dropdown menu to view the types of fish we offer</label>
-    <select name="fish" id="fish">
-        <option value="salmon">Salmon</option>
-        <option value="shark">Shark</option>
-        <option value="tuna">Tuna</option>
-        <option value="tilapia">Tilapia</option>
-    </select>
+    <table><thead><tr>
+      <th>Species of Fish</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Salmon</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Tilapia</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Tuna</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Angler</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
   </div>
   <div id="chickenType">
-    <label for="chicken">Select the dropdown menu to view the types of chicken we offer</label>
-    <select name="chicken" id="chicken">
-        <option value="freeOrganic">Free-range organic</option>
-        <option value="cageOrganic">Caged organic</option>
-        <option value="gmo">GMO</option>
-        <option value="feral">Feral</option>
-    </select>
+    <table><thead><tr>
+      <th>Types of Chicken</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Free-range, organic-fed</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Caged, organic-fed</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Genetically modified</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Feral</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
   </div>
+  <h4 class="sectionTitle">Side Dishes</h4>
   <table id="sideTable">
     <tbody>
-        <tr><td>Pasta</td><td>Potatoes</td></tr>
-      <tr><td><img src="images/WebsiteDesign_Pasta.png"/></td>
-        <td><img src="images/WebsiteDesign_Potato.png"/></td>
-        <td><img src="images/WebsiteDesign_Vegetable.png"/></td></tr>
+        <tr><td>Pasta</td><td>Potatoes</td><td>Vegetables</td></tr>
+      <tr><td><img id="pastaImage" src="images/WebsiteDesign_Pasta.png" onclick="displaySidesTable(this.id)"/></td>
+        <td><img id="potatoImage" src="images/WebsiteDesign_Potato.png" onclick="displaySidesTable(this.id)"/></td>
+        <td><img id="vegetableImage" src="images/WebsiteDesign_Vegetable.png" onclick="displaySidesTable(this.id)"/></td></tr>
     </tbody>
   </table>
   <div id="pastaType">
-    <label for="pasta">Choose from the dropdown menu what type of pasta you want</label>
-    <select name="pasta" id="pasta">
-        <option value="linguine">Linguine</option>
-        <option value="farfalle">Farfalle</option>
-        <option value="spaghetti">Spaghetti</option>
-        <option value="ziti">Ziti</option>
-    </select>
+    <table><thead><tr>
+      <th>Type of Pasta</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Linguine</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Farfalle</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Spaghetti</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Ziti</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
   </div>
+  <div id="potatoType">
+    <table><thead><tr>
+      <th>Type of Potato</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Mashed</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Baked</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Fried</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Raw</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
+  </div>
+  <div id="vegetableType">
+    <table><thead><tr>
+      <th>Type of Vegetable</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Brocoli</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Asparagus</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Pumpkin</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Spinach</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
+  </div>
+  <h4 class="sectionTitle">Dessert</h4>
+  <table id="dessertTable">
+    <tbody>
+        <tr><td>Pie</td><td>Cake</td><td>Ice Cream</td></tr>
+      <tr><td><img id="pieImage" src="images/WebsiteDesign_Pie.png" onclick="displayDessertTable(this.id)"/></td>
+        <td><img id="cakeImage" src="images/WebsiteDesign_Cake.png" onclick="displayDessertTable(this.id)"/></td>
+        <td><img id="icecreamImage" src="images/WebsiteDesign_IceCream.png" onclick="displayDessertTable(this.id)"/></td></tr>
+    </tbody>
+  </table>
+  <div id="pieType">
+    <table><thead><tr>
+      <th>Type of Pie</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Apple</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Blueberry</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Strawberry</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Cherry</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
+  </div>
+  <div id="cakeType">
+    <table><thead><tr>
+      <th>Type of Cake</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Red velvet</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Chocolate</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Banana</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Carrot</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
+  </div>
+  <div id="icecreamType">
+    <table><thead><tr>
+      <th>Type of Ice Cream</th>
+      <th>Current Market Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Vanilla</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Chocolate Chip Cookie Dough</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Chocolate</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+    <tr>
+      <td>Rum Raisin</td>
+      <td>INSERT JAVASCRIPT RESULT</td>
+    </tr>
+  </tbody>
+</table>
+  </div>
+</div>
+<div class="borderDiv"></div>
 </div>
 <script type="text/javascript" src="javascript/menu.js"></script>
   </body>
