Added Reservation page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </tbody>
 </table>
 <p>Welcome to the home page for Castelli's Cooking! You can find our hours of operation
-   below and please explore our Story, our Menu, and our Reviews!</p>
+   below and please explore our Story, our Menu, and join the waitlist for a coveted reservation!</p>
    <div id="buttonDiv">
     <button class="navBtn" id="storyBtn" type="button"><a class="navLink" href="storyPage.html"><span class="buttonTxt">Story</span></a></button>
     <button class="navBtn"  id="menuBtn" type="button"><a class="navLink" href="menuPage.html">Menu</a></button>
