--- a/menuPage.html
+++ b/menuPage.html
@@ -15,15 +15,16 @@
         <tr>
             <td class="spaceCol"></td>
             <td id="logoCol"><img id="logoImage" src="images/WebsiteDesign_Logo.png" /></td>
-            <td id="returnCol"><a href="index.html">Back to Home page</a></td>
+            <td id="returnCol"><a id="returnHome" href="index.html">Back to Home page</a></td>
         </tr>
     </tbody>
 </table>
 <h3 style="text-align:center">Welcome to Castelli Cooking's Menu!</h3>
 <p>Select an image to view the varieties of that food item that we offer. Please note that our 
-  committment to using only fresh foods means we buy alll ingedeints on the spot market so the prices are 
+  committment to using only fresh foods means we buy all our ingedeints on the spot market so the prices are 
   constantly changing.
 </p>
+<p><i>Note: The market prices section is a placeholder and will be updated once we discuss working with Google Sheets.</i></p>
 <h4 class="sectionTitle">Main Dishes</h4>
   <table id="mainTable">
     <tbody>
