--- a/storyPage.html
+++ b/storyPage.html
@@ -14,7 +14,7 @@
             <tr>
                 <td class="spaceCol"></td>
                 <td id="logoCol"><img id="logoImage" src="images/WebsiteDesign_Logo.png" /></td>
-                <td id="returnCol"><a href="index.html">Back to Home page</a></td>
+                <td id="returnCol"><a id="returnHome" href="index.html">Back to Home page</a></td>
             </tr>
         </tbody>
     </table>
@@ -45,7 +45,7 @@
             <span style="font-size:2em; color: blue">&starf;</span>
             <span style="font-size:2em; color: blue">&starf;</span>
             <span style="font-size:2em; color: blue">&starf;</span></td></tr>
-      <tr><td>Check it out, this guy Castelli's apartment is located smack dab in the middle of 
+      <tr><td>Check it out, this guy Castelli has his apartment located smack dab in the middle of 
         Flavortown.
       </td></tr>
       <tr><td><span style="font-size:2em; color: blue">&starf;</span>
